批量编译路由规则